--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "graphql": "^15.4.0",
     "graphql-scalars": "^1.6.1",
-    "graphql-tag": "^2.11.0"
+    "graphql-tag": "^2.11.0",
+    "graphql-upload": "^11.0.0"
   }
 }
